The the titles and view counts for a users articles and display them in their dashboard sorted by view count. [#9705717]

--- a/app/views/reports/index.html.haml
+++ b/app/views/reports/index.html.haml
@@ -89,6 +89,14 @@
 
 == Total: #{@total_views}
 
+%hr
+
+%table
+  - @sorted_article_counts.each do |article_count|
+    %tr
+      %td= article_count[0]
+      %td= article_count[1]
+
 
 / %hr
 / Debugging output
