Add a link to the dashboard to download csv. [#10434055]

--- a/app/views/reports/index.html.haml
+++ b/app/views/reports/index.html.haml
@@ -97,6 +97,8 @@
       %td= article_count[0]
       %td= article_count[1]
 
+=link_to "CSV", article_view_csv_path(@suite101_member_id, @key)
+
 
 / %hr
 / Debugging output
