--- a/app/views/admin/_raw_page_view.html.haml
+++ b/app/views/admin/_raw_page_view.html.haml
@@ -1,9 +1,9 @@
 %tr
   %td= raw_page_view.id
-  %td= raw_page_view.visited_at
-  %td= raw_page_view.tracked_page_id
-  %td= raw_page_view.page_title
-  %td= raw_page_view.page_url
+  %td= raw_page_view.date
+  %td= raw_page_view.suite101_article_id
+  %td= raw_page_view.title
+  %td= raw_page_view.permalink
   %td= raw_page_view.referrer_url
   %td= raw_page_view.writer_id
   %td= raw_page_view.cookie_id
