--- a/app/views/reports/index.html.haml
+++ b/app/views/reports/index.html.haml
@@ -34,7 +34,9 @@
         enabled: false
       },
       xAxis: {
-        type: 'datetime'
+        type: 'datetime',
+        min: #{@start_date.at_midnight.to_i * 1000},
+        startOnTick: true
       },
       yAxis: {
         title: false,
