--- a/app/views/reports/weekly_page_view_graph.html.haml
+++ b/app/views/reports/weekly_page_view_graph.html.haml
@@ -1,3 +1,8 @@
+= javascript_include_tag 'jquery', 'highcharts'
+
+- plot_height = params[:size]=='small' ? 175 : 500
+- legend_enabled = params[:size]=='small' ? false : true
+
 :javascript
   $(function(){
     
@@ -7,16 +12,18 @@
       chart: {
         renderTo: 'page_view_plot',
         defaultSeriesType: 'column',
-        marginRight: 130,
-        marginBottom: 85
+        height: "#{plot_height}",
+        marginLeft: 30,
+        marginRight: 10
       },
       title: false,
       legend: {
-        enabled: true
+        enabled: #{legend_enabled}
       },
       xAxis: {
         type: 'datetime',
         tickInterval: #{1.day * 1000},
+        tickPosition: "inside",
         labels: {
           formatter: function() {
             return Highcharts.dateFormat("%a", this.value);
