Link articles to their permalink.

--- a/app/views/reports/dashboard.html.haml
+++ b/app/views/reports/dashboard.html.haml
@@ -21,13 +21,13 @@
 %h2= I18n.t('report.totals')
 %p== Page Views #{@total_view_count}
 
-
 %h2= I18n.t('report.articles_header')
 %table
-  - @title_counts.each do |a|
+  - @article_counts.each do |ac|
     %tr
-      %td= a[0]
-      %td= a[1]
+      %td
+        %a{:href => "#{ac[:permalink]}"}=ac[:title]
+      %td= ac[:count]
 
 %h2= I18n.t('report.keyword_header')
 %table
@@ -35,13 +35,6 @@
     %tr
       %td= k[0]
       %td= k[1]
-
-%h2 Traffic Sources in the Past 7 Days
-%table
-  - @title_counts.each do |a|
-    %tr
-      %td= a[0]
-      %td= a[1]
 
 
 %p
