Report the view sources as a table. Also, rewrite the url_parser as a referrer_url which parses itself appropriately [#10157033].

--- a/app/views/reports/dashboard.html.haml
+++ b/app/views/reports/dashboard.html.haml
@@ -43,6 +43,12 @@
       %td= k[0]
       %td= k[1]
 
+%h2 Sources
+%table
+  - @source_counts.each do |source, count|
+    %tr
+      %td= source
+      %td= count
 
 %p
   =link_to I18n.t('report.download_data'), article_view_csv_path(@user[:id], @user[:key])  
